--- a/navigacija/CMakeLists.txt
+++ b/navigacija/CMakeLists.txt
@@ -8,7 +8,11 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+	genmsg 
+	actionlib_msgs 
+	actionlib
 )
+generate_messages(DEPENDENCIES actionlib_msgs)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
